# nlpservice

./: CMakeLists.txt  NlpService.cpp  NlpService.h  README.md  client.cpp  logging.cpp  logging.h  nlpservice.kdev4  server.cpp
modules/opencc/: OpenCC.h
modules/wordcut/: WordCutIctclas.h
python/: NlpServiceClient.py
python/gen-py/nlpservice/: NlpService-remote  NlpService.py  __init__.py  ttypes.py
thrift/: nlpservice.thrift
thrift/gen-cpp/: NlpService.cpp  NlpService.h  NlpService_server.skeleton.cpp  nlpservice_constants.cpp  nlpservice_constants.h  nlpservice_types.cpp  nlpservice_types.h
wordcut/: WordCutIctclas.h
